--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Ruixuan Liu
+name: Abulikemu Abuduweili
 
 # Short bio or description (displayed in the header)
 # description: the profile of an engineer, researcher and software developer
@@ -18,12 +18,12 @@ avatar: images/photo_crop.JPG
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: ruixuanl@andrew.cmu.edu
+  email: abulikea@andrew.cmu.edu
   facebook:
   flickr:
-  github: waynekyrie
+  github: Walleclipse
   instagram: 
-  linkedin:
+  linkedin: abulikemu-abuduweili-9305b0171
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
@@ -42,7 +42,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: "https://waynekyrie.github.io" # the base hostname & protocol for your site
+url: "https://walleclipse.github.io/" # the base hostname & protocol for your site
 baseurl: "/"
 
 # If you're hosting your site at a Project repository on GitHub pages
