--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: "https://walleclipse.github.io/" # the base hostname & protocol for your site
-baseurl: "/"
+url: "https://walleclipse.github.io" # the base hostname & protocol for your site
+baseurl: ""
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -56,7 +56,7 @@ baseurl: "/"
 #
 
 #permalink: /:title/
-permalink: /
+permalink: /:categories/:title/
 
 
 # The release of Jekyll Now that you're using
